--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,10 @@
 asgiref==3.8.1
 Django==5.2.3
 sqlparse==0.5.3
+django-cors-headers
+validators==0.35.0
+requests==2.31.0
+python-dotenv==1.0.1
+beautifulsoup4
+ipython
+openai
