--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@nuxt/kit": "^3.17.6"
+    "@nuxt/kit": "^3.17.6",
+    "@nuxtjs/mdc": "^0.17.2"
   }
 }
